--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,11 @@ body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: linear-gradient(rgba(252, 238, 0, 0.85), rgba(252, 238, 0, 0.85)),
+    url("/fondMusique.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1 {
