--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin: auto;
   width: 100vw;
   user-select: none;
   font-synthesis: none;
